--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>VIPIN - Android Developer</title>
+    <title>Ojas's Website</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
 
@@ -25,7 +25,7 @@
 
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ffff;color:black;">
-          <a class="navbar-brand mr-auto" href="#">VIPIN.APK</a>
+          <a class="navbar-brand mr-auto" href="#">Ojas Karmarkar</a>
           <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -53,8 +53,8 @@
                         <img src="img/header-illust.svg" alt="" srcset="" class="illust-main">
                     </div>
                     <div class="text-section">
-                        <h1 class="main-heading wow lightSpeedIn">Independent Android Designer</h1>
-                        <p class="main-para wow lightSpeedIn">Welcome, everyone! My name is Vipin and I am an android developer, User Interface Designer and a java Developer. 🕹 As a location independent android designer, I am working with customers all over our beautiful planet. 🌎 </p>
+                        <h1 class="main-heading wow lightSpeedIn">Flutter Developer</h1>
+                        <p class="main-para wow lightSpeedIn">Welcome! My name is Ojas and I am an Flutter Dev , and I have basic experiene in Python , Javascript. I also seem to have a good expereince of HTML , CSS. 🕹 As a location independent Developer, I am working with customers all over the globe. 🌎 </p>
                         <button class="btn main-btn my-2 my-sm-0 wow rubberBand" type="submit">Explore Me</button>
                     </div>
                 </div>
@@ -69,8 +69,8 @@
                     <a href="https://play.google.com/store/apps/details?id=com.electronlabs.walldrops">
                     <div class="portfolio-code wow bounceInUp">
                    <img src="img/project/walldrops.svg" class="code-work-img">
-                   <div class="project_heading-code">WallDrops</div>
-                   <p class="code-stuff">Walldrops is a wallpaper application that comes with more than 10K+ wallpapers out of the box.</p>
+                   <div class="project_heading-code">Beats</div>
+                   <p class="code-stuff">Beats is a materialistic , minimal music player built in Flutter and has over 3k+ downloads!</p>
                 </div>
               </a>
                   </div>
@@ -79,8 +79,8 @@
                     <a href="https://iamharsh.design/neutron/">
                     <div class="portfolio-code wow bounceInUp">
                    <img src="img/project/mac-neutron.svg" class="code-work-img">
-                   <div class="project_heading-code">Neutron-Code Editor</div>
-                   <p class="code-stuff">Neutron is a code editor that support web technologies and shows the preview in realtym just like codepen.io .</p>
+                   <div class="project_heading-code">Halo!</div>
+                   <p class="code-stuff">Halo! is a Netflix like streaming app to stream movies and series for free! It is a complete netflix clone and has over 100k+ downloads!</p>
                 </div>
               </a>
                   </div>
@@ -89,45 +89,13 @@
                     <a href="https://github.com/theuitown/joe_voice_assistant.py">
                     <div class="portfolio-code wow bounceInUp">
                    <img src="img/project/joe.svg" class="code-work-img">
-                   <div class="project_heading-code">Joe Assistant</div>
-                  <p class="code-stuff">Joe is a virtual voice assistant developed in python and it can answer your any question.</p>
+                   <div class="project_heading-code">Login App</div>
+                  <p class="code-stuff">It is a template that I made for usual login , signup and to fill information using a form!</p>
                 </div>
                 </a>
                   </div>
 
                   <div class="w-100"></div>
-
-                  <div class="col">
-                    <a href="https://snack.expo.io/@electronlabs/customising">
-                    <div class="portfolio-code wow bounceInUp">
-                   <img src="img/project/login-react.svg" class="code-work-img">
-                   <div class="project_heading-code">Login App</div>
-                  <p class="code-stuff">Clean and minimal Registation app made in react native.</p>
-                </div>
-                </a>
-                  </div>
-                  <div class="col">
-                    <a href="https://iamharsh.dev/crux">
-                    <div class="portfolio-code wow bounceInUp">
-                   <img src="img/project/crux-landing-page.svg" class="code-work-img">
-                   <div class="project_heading-code">CRUX Landing Page</div>
-                  <p class="code-stuff">Clean and minimal responsive mobile app landing page based on Bootstrap 4.</p>
-                </div>
-                </a>
-                  </div>
-
-                  <div class="col">
-                    <a href="https://dribbble.com/shots/6546168-Google-Maps-Minimal-UI-Redesign">
-                    <div class="portfolio-code wow bounceInUp">
-                   <img src="img/project/GMAPS.svg" class="code-work-img">
-                   <div class="project_heading-code">GMAP Redesign</div>
-                  <p class="code-stuff">Minimal redesign of Google Maps inspired from UBER Design.</p>
-                </div>
-                </a>
-                  </div>
-
-                </div>
-              </div>
     </div>
     </div>
 
@@ -145,31 +113,32 @@
               <div class="feature_item wow zoomIn">
                <a href="mailto:electronlabsdev@gmail.com?subject=I want wordpress website!!!">
                 <i style="font-size:2rem;margin-bottom: 1.3rem;" class="fas fa-pen-nib"></i>
-                <h4>Vector Design</h4>
-                <p>Custom Made Icons and Vectors help to convey a personal feeling to your website.
-                    They help to tell a quick story and they help to make complicated things very simple.</p>
+                <h4>App Design</h4>
+                <p>If you have a design in mind , I can suggest you better ideas always!
+                    Otherwise I can always design your app in Figma!</p>
               </div></a>
             </div>
             <div class="col-12 col-md-4">
              <div class="feature_item wow zoomIn">
               <a href="mailto:electronlabsdev@gmail.com?subject=Saying Hello!!!">
-                <i style="font-size:2rem;margin-bottom: 1.3rem;" class="fas fa-chart-line"></i>
-                <h4>SEO Marketing</h4>
-                <p>Chances are you've found me through a search engine. If so, I did that through SEO (search engine optimization).
+                 <i style="font-size:2rem;margin-bottom: 1.3rem;" class="fas fa-code"></i>
+                
+                <h4>App Development</h4>
+                <p>Nothing is more important than transforming app design into an actual app!
 
-                    If you want SEO Optimization for your website as well, let us do some SEO. </p>
+                    After designing , Its developing time! </p>
               </div></a>
             </div>
             <div class="col-12 col-md-4">
               <div class="feature_item wow zoomIn">
                <a href="mailto:electronlabsdev@gmail.com?subject=Saying Hello!!!">
-                <i style="font-size:2rem;margin-bottom: 1.3rem;" class="fas fa-code"></i>
-                <h4>Front End Development</h4>
+                <i style="font-size:2rem;margin-bottom: 1.3rem;" class="fas fa-chart-line"></i>
+                <h4>App Publishing</h4>
                 <p>
 
-                    Besides Design and SEO, I also do Front End Development.
+                    After developing , its time for publishing!
 
-                    I write the markup for my websites with HTML 5, CSS 3 and I make them come alive with Javascript (ES6). </p>
+                   I will upload the app to the play store , and make it reach to the audiences</p>
               </div></a>
             </div>
           </div>
@@ -180,8 +149,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-6">
-                    <h1 class="heading-random-section wow bounceInLeft">A personalized website with custom made Icons & Illustrations.</h1>
-                    <p style="margin-top: 1rem;" class="para-random-section wow bounceInLeft">Illustrations help to show your visitors what your website is about. With well made Illustrations or Vectors, you don't even need to read the text to understand the purpose of the website. That is why I love to include them in my web design process. </p>
+                    <h1 class="heading-random-section wow bounceInLeft">A personalized app , tailored for you</h1>
+                    <p style="margin-top: 1rem;" class="para-random-section wow bounceInLeft">Flutter makes it possible to create apps , rapidly while keeping a simple and minimal design!</p>
                     <button class="btn main-btn my-2 my-sm-0 wow bounceInLeft" type="submit">Explore Me</button>
                 </div>
                 <div class="col-12 col-md-6" style="text-align: right;">
@@ -196,29 +165,13 @@
             <div class="row">
                 <div class="col">
                     <h1 class="heading-random-section-2 wow bounceInUp">
-                        A personalized website with custom made Icons & Illustrations.
+                        Rest assured , Your ideas will be turned into a live app!
                     </h1>
                     <button class="btn main-btn-white my-2 my-sm-0 wow rubberBand" type="submit">Explore Me</button>
                 </div>
                     </div>
             </div>
         </div>
-
-        <div class="just-random-section"  style="background-color: #F4F0FB; padding-bottom: 5rem;">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 col-md-6 wow bounceInLeft" style="text-align: left;margin-top:3rem;">
-                        <img class="fit-section" src="img/img2.svg" alt="">
-                    </div>
-                    <div class="col-12 col-md-6">
-                        <h1 class="heading-random-section wow bounceInRight">A personalized website with custom made Icons & Illustrations.</h1>
-                        <p class="para-random-section wow bounceInRight">Illustrations help to show your visitors what your website is about. With well made Illustrations or Vectors, you don't even need to read the text to understand the purpose of the website. That is why I love to include them in my web design process. </p>
-                        <button class="btn main-btn my-2 my-sm-0 wow rubberBand" type="submit">Explore Me</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
         <div class="testimonial-section"  style="background-color: #f4f0eb;color:#000;">
             <div class="skills-heading wow fadeInDown">What Client Says</div>
             <div class="container">
@@ -226,22 +179,12 @@
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active text-center p-4">
                             <div class="client-words">
-                                <p class="para-random-section">"Extremely pleased with his expedited work and great attention to detail. I will definitely be recommending him to anyone who needs a great website created :) Thanks!!!" </p>
+                                <p class="para-random-section">"Extremely pleased with his expedited work and great attention to detail. I will definitely be recommending him to anyone who needs an app! Thanks!!!" </p>
                             </div>
                         </div>
                         <div class="carousel-item text-center p-4">
                             <div class="client-words">
-                                <p class="para-random-section">"Extremely pleased with his expedited work and great attention to detail. I will definitely be recommending him to anyone who needs a great website created :) Thanks!!!" </p>
-                            </div>
-                        </div>
-                        <div class="carousel-item text-center p-4">
-                            <div class="client-words">
-                                <p class="para-random-section">"Extremely pleased with his expedited work and great attention to detail. I will definitely be recommending him to anyone who needs a great website created :) Thanks!!!" </p>
-                            </div>
-                        </div>
-                        <div class="carousel-item text-center p-4">
-                            <div class="client-words">
-                                <p class="para-random-section">"Extremely pleased with his expedited work and great attention to detail. I will definitely be recommending him to anyone who needs a great website created :) Thanks!!!" </p>
+                                <p class="para-random-section">"Couldnt have found any better person to make an app for my needs!" </p>
                             </div>
                         </div>
                     </div>
@@ -254,9 +197,9 @@
                 <div class="row">
                     <div class="col-12 col-md-6" style="text-align: left;">
                         <h1 class="heading-random-section-2 wow rubberBand">
-                            More Free stuff?
+                            Want To Have A Chat?
                         </h1>
-                        <p class="para-random-section wow rubberBand">Illustrations help to show your visitors what your website is about. With well made Illustrations or Vectors, you don't even need to read the text to understand the purpose of the website. That is why I love to include them in my web design process. </p>
+                        <p class="para-random-section wow rubberBand">Lets talk about your next project , describe your budget and the idea in a few words! </p>
                     </div>
                     <div class="col-12 col-md-6" style="margin-left:4rem;text-align: left;max-width:40%">
                         <form>
@@ -266,7 +209,7 @@
                               <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                             </div>
                             <div class="form-group">
-                                <label for="exampleFormControlTextarea1">Example textarea</label>
+                                <label for="exampleFormControlTextarea1">Description</label>
                                 <textarea class="form-control wow rubberBand" id="exampleFormControlTextarea1" rows="3"></textarea>
                               </div>
 
@@ -281,17 +224,17 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12 col-md-7">
-                            <h2 class="title-heading">Location Independent Web Designer</h2>
+                            <h2 class="title-heading">Location Independent App Developer</h2>
                             <ul class="skills-list" style="padding-left: 0px;">
-                                <li><i class="fas fa-check"></i> I create things with ❤️</li>
-                                <li><i class="fas fa-check"></i> SEO Experience with proofed Rankings 📈</li>
-                                <li><i class="fas fa-check"></i>  Custom Made Illustrations/Icons 🎨</li>
-                                <li><i class="fas fa-check"></i> SEO Optimized Web Design </li>
+                                <li><i class="fas fa-check"></i> I Create Things With ❤️</li>
+                                <li><i class="fas fa-check"></i> Marketing On Playstore 📈</li>
+                                <li><i class="fas fa-check"></i> Design And Development 🎨</li>
+                                <li><i class="fas fa-check"></i>Optimized App</li>
                             </ul>
                         </div>
                         <div class="col-12 col-md-3">
                             <ul class="skills-list" style="padding-left: 0px;margin-top: 5rem;">
-                                <li>sayhi@lukaszadam.com</li>
+                                <li>ojask2002@gmail.com</li>
                                 <a href=""><li>Resources</li></a>
                                 <a href=""><li>About Me</li></a>
                                 <a href=""><li>Privacy Policy</li></a>
