--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>iamharsh-Front-end Web Desginer</title>
+    <title>Ojas's Website</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
 
@@ -25,7 +25,7 @@
 
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ffff;color:black;">
-          <a class="navbar-brand mr-auto" href="index.html">VIPIN.APK</a>
+          <a class="navbar-brand mr-auto" href="index.html">Ojas Karmarkar</a>
           <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -37,9 +37,7 @@
                 <li class="nav-item active">
                   <a class="nav-link" href="#">About</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Projects</a>
-                </li>
+
             </ul>
           </div>
         </nav>
@@ -51,9 +49,9 @@
           <div class="row">
             <div class="col">
               <h2 class="heading-1 wow bounceInRight">About me</h2>
-              <p class="about-para wow bounceInRight">Welcome 😄 My name is Lukaz Adam and I am an independent web designer, illustrator and web developer.
+              <p class="about-para wow bounceInRight">Welcome 😄 My name is Ojas Karmarkar and I stay in Mumbai , India.
 
-                Most people get to know me because of my free Illustrations. This is where I offer free svg illustrations for commercial and personal purposes - for everyone!
+                Most people get to know me because of my open source work on flutter projects.
 
                 I hear you asking.</p>
             </div>
@@ -65,10 +63,10 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <h2 class="heading-1 wow bounceInRight">Web Design services</h2>
-              <p class="about-para wow bounceInRight">Every design is handcrafted and coded by me. One thing that I can’t get enough of is SEO. Search Engine Optimization is a field which changes very frequently, but it is a lot of fun to optimize a website. Sometimes I work with clients who offer a great service, but since the website is not up to Googles modern standards, they are suffering from a bad ranking.
+              <h2 class="heading-1 wow bounceInRight">App Development</h2>
+              <p class="about-para wow bounceInRight">I like to finish the app in less time , thereby with more productivity! 
 
-                To help those small businesses, I do SEO. I’ve already met a lot of inspiring people, most of them are small businesses which are doing their best, to offer fresh, new and creative content. All they need is a good ranking.</p>
+               Your startup or buiseness can grow rapidly with the help of neatly designed apps for your clients!</p>
             </div>
           </div>
         </div>
@@ -78,9 +76,8 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <h2 class="heading-1 wow bounceInRight">Why did I do that?</h2>
-              <p class="about-para wow bounceInRight">As a web designer, I know it can be tough to find free resources online and that is why I wanted to create them for free in the first place.
-                That’s not even all, I’ve also published a complete list of all the tools that I use. This way you can learn how to create illustrations, rankings or websites by yourself.</p>
+              <h2 class="heading-1 wow bounceInRight">Why did I choose this?</h2>
+              <p class="about-para wow bounceInRight">As an app developer , I would like to develop apps for small startups to make then grow! And what's better than turning your hobby into your profession?!</p>
             </div>
           </div>
         </div>
@@ -89,33 +86,33 @@
     </div>
 
 
-            <div class="just-random-section-2">
-              <div class="container like-form-raised wow rubberBand" style="border: 2px solid #000;">
-                    <div class="row">
-                        <div class="col-12 col-md-6" style="text-align: left;">
-                            <h1 class="heading-random-section-2 wow rubberBand">
-                                More Free stuff?
-                            </h1>
-                            <p class="para-random-section wow rubberBand">Illustrations help to show your visitors what your website is about. With well made Illustrations or Vectors, you don't even need to read the text to understand the purpose of the website. That is why I love to include them in my web design process. </p>
-                        </div>
-                        <div class="col-12 col-md-6" style="margin-left:4rem;text-align: left;max-width:40%">
-                            <form>
-                                <div class="form-group">
-                                  <label for="exampleInputEmail1" class="wow rubberBand">Email address</label>
-                                  <input type="email" class="form-control wow rubberBand" id="exampleInputEmail1" aria-describedby="emailHelp">
-                                  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                                </div>
-                                <div class="form-group">
-                                    <label for="exampleFormControlTextarea1">Example textarea</label>
-                                    <textarea class="form-control wow rubberBand" id="exampleFormControlTextarea1" rows="3"></textarea>
-                                  </div>
-
-                                <button type="submit" class="btn main-btn btn-primary wow rubberBand">Submit</button>
-                              </form>
-                        </div>
-                            </div>
-                    </div>
+    <div class="just-random-section-2">
+      <div class="container like-form-raised wow rubberBand" style="border: 2px solid #000;">
+            <div class="row">
+                <div class="col-12 col-md-6" style="text-align: left;">
+                    <h1 class="heading-random-section-2 wow rubberBand">
+                        Want To Have A Chat?
+                    </h1>
+                    <p class="para-random-section wow rubberBand">Lets talk about your next project , describe your budget and the idea in a few words! </p>
                 </div>
+                <div class="col-12 col-md-6" style="margin-left:4rem;text-align: left;max-width:40%">
+                    <form>
+                        <div class="form-group">
+                          <label for="exampleInputEmail1" class="wow rubberBand">Email address</label>
+                          <input type="email" class="form-control wow rubberBand" id="exampleInputEmail1" aria-describedby="emailHelp">
+                          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlTextarea1">Description</label>
+                            <textarea class="form-control wow rubberBand" id="exampleFormControlTextarea1" rows="3"></textarea>
+                          </div>
+
+                        <button type="submit" class="btn main-btn btn-primary wow rubberBand">Submit</button>
+                      </form>
+                </div>
+                    </div>
+            </div>
+        </div>
 
                             <div class="footer wow rubberBand">
                                 <div class="container">
@@ -123,24 +120,24 @@
                                         <div class="col-12 col-md-7">
                                             <h2 class="title-heading">Location Independent Web Designer</h2>
                                             <ul class="skills-list" style="padding-left: 0px;">
-                                                <li><i class="fas fa-check"></i> I create things with ❤️</li>
-                                                <li><i class="fas fa-check"></i> SEO Experience with proofed Rankings 📈</li>
-                                                <li><i class="fas fa-check"></i>  Custom Made Illustrations/Icons 🎨</li>
-                                                <li><i class="fas fa-check"></i> SEO Optimized Web Design </li>
+                                              <li><i class="fas fa-check"></i> I Create Things With ❤️</li>
+                                              <li><i class="fas fa-check"></i> Marketing On Playstore 📈</li>
+                                              <li><i class="fas fa-check"></i> Design And Development 🎨</li>
+                                              <li><i class="fas fa-check"></i>Optimized App</li>
                                             </ul>
                                         </div>
                                         <div class="col-12 col-md-3">
                                             <ul class="skills-list" style="padding-left: 0px;margin-top: 5rem;">
-                                                <li>sayhi@lukaszadam.com</li>
-                                                <a href=""><li>Resources</li></a>
+                                                <li>ojask2002@gmail.com</li>
+                                                <a href="index.html"><li>Home</li></a>
                                                 <a href=""><li>About Me</li></a>
                                                 <a href=""><li>Privacy Policy</li></a>
                                             </ul>
                                         </div>
                                         <div class="col-12 col-md-2">
                                             <div class="social" style="padding-left: 0px;margin-top: 5rem;">
-                                                <a href="https://www.facebook.com/groups/543169876044894/?ref=bookmarks" target="_blank"><i class="fab fa-facebook"></i></a>
-                                                <a href="https://instagram.com/lukaszadam_illustrations" target="_blank"><i class="fab fa-instagram"></i></a>
+                                                <a href="https://github.com/OjasKarmarkar" target="_blank"><i class="fab fa-github"></i></a>
+                                                <a href="https://instagram.com/ojask002" target="_blank"><i class="fab fa-instagram"></i></a>
                                                 <a href="/contact"><i class="fas fa-envelope"></i></a>
                                             </div>
                                         </div>
