--- a/index.html
+++ b/index.html
@@ -37,9 +37,6 @@
                 <li class="nav-item">
                   <a class="nav-link" href="about.html">About</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#projects">Projects</a>
-                </li>
             </ul>
           </div>
         </nav>
@@ -111,7 +108,7 @@
           <div class="row feature_inner">
             <div class="col-12 col-md-4">
               <div class="feature_item wow zoomIn">
-               <a href="mailto:electronlabsdev@gmail.com?subject=I want wordpress website!!!">
+               <a href="">
                 <i style="font-size:2rem;margin-bottom: 1.3rem;" class="fas fa-pen-nib"></i>
                 <h4>App Design</h4>
                 <p>If you have a design in mind , I can suggest you better ideas always!
@@ -120,7 +117,7 @@
             </div>
             <div class="col-12 col-md-4">
              <div class="feature_item wow zoomIn">
-              <a href="mailto:electronlabsdev@gmail.com?subject=Saying Hello!!!">
+              <a href="">
                  <i style="font-size:2rem;margin-bottom: 1.3rem;" class="fas fa-code"></i>
                 
                 <h4>App Development</h4>
@@ -131,7 +128,7 @@
             </div>
             <div class="col-12 col-md-4">
               <div class="feature_item wow zoomIn">
-               <a href="mailto:electronlabsdev@gmail.com?subject=Saying Hello!!!">
+               <a href="">
                 <i style="font-size:2rem;margin-bottom: 1.3rem;" class="fas fa-chart-line"></i>
                 <h4>App Publishing</h4>
                 <p>
@@ -235,15 +232,15 @@
                         <div class="col-12 col-md-3">
                             <ul class="skills-list" style="padding-left: 0px;margin-top: 5rem;">
                                 <li>ojask2002@gmail.com</li>
-                                <a href=""><li>Resources</li></a>
-                                <a href=""><li>About Me</li></a>
+                                <a href=""><li>Home</li></a>
+                                <a href="about.html"><li>About Me</li></a>
                                 <a href=""><li>Privacy Policy</li></a>
                             </ul>
                         </div>
                         <div class="col-12 col-md-2">
                             <div class="social" style="padding-left: 0px;margin-top: 5rem;">
-                                <a href="https://www.facebook.com/groups/543169876044894/?ref=bookmarks" target="_blank"><i class="fab fa-facebook"></i></a>
-                                <a href="https://instagram.com/lukaszadam_illustrations" target="_blank"><i class="fab fa-instagram"></i></a>
+                                <a href="https://github.com/OjasKarmarkar" target="_blank"><i class="fab fa-github"></i></a>
+                                <a href="https://instagram.com/ojask002" target="_blank"><i class="fab fa-instagram"></i></a>
                                 <a href="/contact"><i class="fas fa-envelope"></i></a>
                             </div>
                         </div>
