--- a/about.html
+++ b/about.html
@@ -130,15 +130,15 @@
                                             <ul class="skills-list" style="padding-left: 0px;margin-top: 5rem;">
                                                 <li>ojask2002@gmail.com</li>
                                                 <a href="index.html"><li>Home</li></a>
-                                                <a href=""><li>About Me</li></a>
+                                                <a href="about.html"><li>About Me</li></a>
                                                 <a href=""><li>Privacy Policy</li></a>
                                             </ul>
                                         </div>
                                         <div class="col-12 col-md-2">
                                             <div class="social" style="padding-left: 0px;margin-top: 5rem;">
-                                                <a href="https://github.com/OjasKarmarkar" target="_blank"><i class="fab fa-github"></i></a>
-                                                <a href="https://instagram.com/ojask002" target="_blank"><i class="fab fa-instagram"></i></a>
-                                                <a href="/contact"><i class="fas fa-envelope"></i></a>
+                                              <a href="https://github.com/OjasKarmarkar" target="_blank"><i class="fab fa-github"></i></a>
+                                              <a href="https://instagram.com/ojask002" target="_blank"><i class="fab fa-instagram"></i></a>
+                                              <a href="mailto:ojask2002@gmail.com"><i class="fas fa-envelope"></i></a>
                                             </div>
                                         </div>
                                     </div>
