--- a/index.html
+++ b/index.html
@@ -46,13 +46,14 @@
         <div class="row">
             <div class="col">
                 <div class="header">
-                    <div class="main-img-illust wow wobble">
+                    <div class="main-img-illust wow zoomIn">
                         <img src="img/header-illust.svg" alt="" srcset="" class="illust-main">
                     </div>
                     <div class="text-section">
                         <h1 class="main-heading wow lightSpeedIn">Flutter Developer</h1>
                         <p class="main-para wow lightSpeedIn">Welcome! My name is Ojas and I am an Flutter Dev , and I have basic experiene in Python , Javascript. I also seem to have a good expereince of HTML , CSS. 🕹 As a location independent Developer, I am working with customers all over the globe. 🌎 </p>
-                        <button class="btn main-btn my-2 my-sm-0 wow rubberBand" type="submit">Explore Me</button>
+                        <form action="about.html"><button class="btn main-btn my-2 my-sm-0 wow rubberBand" type="submit">Explore Me</button></form>
+                        
                     </div>
                 </div>
             </div>
@@ -63,9 +64,9 @@
               <div class="container">
                 <div class="row">
                   <div class="col">
-                    <a href="https://play.google.com/store/apps/details?id=com.electronlabs.walldrops">
+                    <a href="https://play.google.com/store/apps/details?id=in.selvasoft.beats">
                     <div class="portfolio-code wow bounceInUp">
-                   <img src="img/project/walldrops.svg" class="code-work-img">
+                   <img src="img/beats.png" class="code-work-img">
                    <div class="project_heading-code">Beats</div>
                    <p class="code-stuff">Beats is a materialistic , minimal music player built in Flutter and has over 3k+ downloads!</p>
                 </div>
@@ -73,9 +74,9 @@
                   </div>
 
                   <div class="col">
-                    <a href="https://iamharsh.design/neutron/">
+                    <a href="https://play.google.com/store/apps/details?id=com.tecmpvbr9">
                     <div class="portfolio-code wow bounceInUp">
-                   <img src="img/project/mac-neutron.svg" class="code-work-img">
+                   <img src="img/halo.png" height="200" width="200">
                    <div class="project_heading-code">Halo!</div>
                    <p class="code-stuff">Halo! is a Netflix like streaming app to stream movies and series for free! It is a complete netflix clone and has over 100k+ downloads!</p>
                 </div>
@@ -83,9 +84,9 @@
                   </div>
 
                   <div class="col">
-                    <a href="https://github.com/theuitown/joe_voice_assistant.py">
+                    <a href="https://github.com/OjasKarmarkar/Apli">
                     <div class="portfolio-code wow bounceInUp">
-                   <img src="img/project/joe.svg" class="code-work-img">
+                   <img src="img/flutter.png" >
                    <div class="project_heading-code">Login App</div>
                   <p class="code-stuff">It is a template that I made for usual login , signup and to fill information using a form!</p>
                 </div>
@@ -164,7 +165,7 @@
                     <h1 class="heading-random-section-2 wow bounceInUp">
                         Rest assured , Your ideas will be turned into a live app!
                     </h1>
-                    <button class="btn main-btn-white my-2 my-sm-0 wow rubberBand" type="submit">Explore Me</button>
+                    <form action="about.html"><button class="btn main-btn-white my-2 my-sm-0 wow rubberBand" type="submit">Explore Me</button></form>
                 </div>
                     </div>
             </div>
@@ -209,8 +210,8 @@
                                 <label for="exampleFormControlTextarea1">Description</label>
                                 <textarea class="form-control wow rubberBand" id="exampleFormControlTextarea1" rows="3"></textarea>
                               </div>
-
-                            <button type="submit" class="btn main-btn btn-primary wow rubberBand">Submit</button>
+                            
+                              <form action="mailto:ojask2002@gmail.com"><button type="submit" class="btn main-btn btn-primary wow rubberBand">Submit</button></form>
                           </form>
                     </div>
                         </div>
@@ -232,7 +233,7 @@
                         <div class="col-12 col-md-3">
                             <ul class="skills-list" style="padding-left: 0px;margin-top: 5rem;">
                                 <li>ojask2002@gmail.com</li>
-                                <a href=""><li>Home</li></a>
+                                <a href="index.html"><li>Home</li></a>
                                 <a href="about.html"><li>About Me</li></a>
                                 <a href=""><li>Privacy Policy</li></a>
                             </ul>
@@ -241,7 +242,7 @@
                             <div class="social" style="padding-left: 0px;margin-top: 5rem;">
                                 <a href="https://github.com/OjasKarmarkar" target="_blank"><i class="fab fa-github"></i></a>
                                 <a href="https://instagram.com/ojask002" target="_blank"><i class="fab fa-instagram"></i></a>
-                                <a href="/contact"><i class="fas fa-envelope"></i></a>
+                                <a href="mailto:ojask2002@gmail.com"><i class="fas fa-envelope"></i></a>
                             </div>
                         </div>
                     </div>
